Import timestamp routines

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 common_source = address.cc address.hh exception.hh ezio.cc ezio.hh \
 	file_descriptor.hh poller.cc poller.hh \
-	socket.cc socket.hh socket_type.hh util.hh
+	socket.cc socket.hh socket_type.hh util.hh \
+	timestamp.hh timestamp.cc
 
 bin_PROGRAMS = josh
 josh_SOURCES = $(common_source) main.cc
